cmake_minimum_required(VERSION 2.6)

PROJECT(csm_eigen)

ADD_SUBDIRECTORY(src)

catkin_package(
  INCLUDE_DIRS include
  LIBRARIES csm_eigen
  DEPENDS Eigen3
)

#install(TARGETS csm_eigen
#  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
#)
